src/objects/Subscription_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Delinian_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Delinian Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscription Opportunities</relationshipLabel>
        <relationshipName>Subscription_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Subscription Opportunities</relationshipLabel>
        <relationshipName>Subscription_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Subscription Opportunities</relationshipLabel>
        <relationshipName>Subscription_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Opportunities</relationshipLabel>
        <relationshipName>Subscription_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subscription Opportunity</label>
    <nameField>
        <displayFormat>CODE-{0000000000}</displayFormat>
        <label>CODE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>